@@ -7,12 +7,18 @@ lib/io.py -> iolib/foreign.py (stata data format reader available from iolib)
 family -> families
 families.links.inverse -> families.links.inverse_power
 Datasets' Load class is now load function.
+regression.py -> regression/linear_model.py
+discretemod.py -> discrete/discretemod.py
+rlm.py -> robust/rlm.py
+glm.py -> glm/glm.py
+model.py -> base/model.py
 
 *main changes*
 Improved maximum likelihood framework.
 Refactor of the datasets sub-package.
 Removed RPy dependency for running the test suite.
 Refactored the test suite.
+ARMA models for time series.
 
 
 
